fixed naming in package.json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Backbonette_Client",
+  "name": "Backonette_Client",
   "description": "Boilerplate code for Backbone.Marionette clients",
   "version": "0.1.1",
   "author": "Aaron Graham",
